@@ -18,11 +18,12 @@
  * under the License.
  *
  */
+
 package org.apache.qpid.server.query.engine;
 
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 import java.math.BigInteger;
 import java.time.LocalDateTime;
@@ -73,7 +74,7 @@ public class TestBroker
 
     private static final List<Connection> connections = new ArrayList<>();
 
-    public static Broker<?> createBroker()
+    public static synchronized Broker<?> createBroker()
     {
         try
         {
@@ -85,9 +86,9 @@ public class TestBroker
             _broker = BrokerTestHelper.createBrokerMock();
 
             final List<String> attributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(Broker.class));
-            when(_broker.getAttributeNames()).thenReturn(attributeNames);
-            when(_broker.getAttribute(eq("name"))).thenReturn("mock");
-            when(_broker.getName()).thenReturn("mock");
+            doReturn(attributeNames).when(_broker).getAttributeNames();
+            doReturn("mock").when(_broker).getAttribute(eq("name"));
+            doReturn("mock").when(_broker).getName();
 
             final Map<String, Object> attributesMap = new HashMap<>();
             attributesMap.put(AuthenticationProvider.NAME, "ScramSHA256AuthenticationManager");
@@ -96,75 +97,71 @@ public class TestBroker
             final ScramSHA256AuthenticationManager authProvider =
                 (ScramSHA256AuthenticationManager) _broker.getObjectFactory()
                     .create(AuthenticationProvider.class, attributesMap, _broker);
-            when(_broker.getAuthenticationProviders()).thenReturn(List.of(authProvider));
+            doReturn(List.of(authProvider)).when(_broker).getAuthenticationProviders();
 
             final List<String> portAttributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(Port.class));
             final HttpPort<?> httpPort = mock(HttpPort.class);
-            when(httpPort.getAttributeNames()).thenReturn(portAttributeNames);
-            when(httpPort.getPort()).thenReturn(40606);
-            when(httpPort.getBoundPort()).thenReturn(40606);
-            when(httpPort.getCreatedBy()).thenReturn("admin");
-            when(httpPort.getCreatedTime()).thenReturn(new Date());
-            when(httpPort.getName()).thenReturn("httpPort");
-            when(httpPort.getAttribute(Port.NAME)).thenReturn("httpPort");
-            when(httpPort.getState()).thenReturn(State.ACTIVE);
-            when(httpPort.getType()).thenReturn("HTTP");
-            when(httpPort.getAttribute(HttpPort.AUTHENTICATION_PROVIDER)).thenReturn(authProvider);
-            when(httpPort.getStatistics()).thenReturn(new HashMap<>());
+            doReturn(portAttributeNames).when(httpPort).getAttributeNames();
+            doReturn(40606).when(httpPort).getPort();
+            doReturn(40606).when(httpPort).getBoundPort();
+            doReturn("admin").when(httpPort).getCreatedBy();
+            doReturn(new Date()).when(httpPort).getCreatedTime();
+            doReturn("httpPort").when(httpPort).getName();
+            doReturn("httpPort").when(httpPort).getAttribute(Port.NAME);
+            doReturn(State.ACTIVE).when(httpPort).getState();
+            doReturn("HTTP").when(httpPort).getType();
+            doReturn(authProvider).when(httpPort).getAttribute(HttpPort.AUTHENTICATION_PROVIDER);
+            doReturn(new HashMap<>()).when(httpPort).getStatistics();
 
             final Port<?> amqpPort = mock(Port.class);
-            when(amqpPort.getAttributeNames()).thenReturn(portAttributeNames);
-            when(amqpPort.getConnections()).thenReturn(connections);
-            when(amqpPort.getChildren(Connection.class)).thenReturn(connections);
-            when(amqpPort.getPort()).thenReturn(40206);
-            when(amqpPort.getBoundPort()).thenReturn(40206);
-            when(amqpPort.getCreatedBy()).thenReturn("admin");
-            when(amqpPort.getCreatedTime()).thenReturn(new Date());
-            when(amqpPort.getName()).thenReturn("amqpPort");
-            when(amqpPort.getAttribute(Port.NAME)).thenReturn("amqpPort");
-            when(amqpPort.getState()).thenReturn(State.ACTIVE);
-            when(amqpPort.getType()).thenReturn("AMQP");
+            doReturn(portAttributeNames).when(amqpPort).getAttributeNames();
+            doReturn(connections).when(amqpPort).getConnections();
+            doReturn(connections).when(amqpPort).getChildren(Connection.class);
+
+            doReturn(40206).when(amqpPort).getPort();
+            doReturn(40206).when(amqpPort).getBoundPort();
+            doReturn("admin").when(amqpPort).getCreatedBy();
+            doReturn(new Date()).when(amqpPort).getCreatedTime();
+            doReturn("amqpPort").when(amqpPort).getName();
+            doReturn("amqpPort").when(amqpPort).getAttribute(Port.NAME);
+            doReturn(State.ACTIVE).when(amqpPort).getState();
+            doReturn("AMQP").when(amqpPort).getType();
             final Map<String, Object> portStatistics = new HashMap<>();
             portStatistics.put("connectionCount", 30);
             portStatistics.put("totalConnectionCount", 30);
-            when(httpPort.getStatistics()).thenReturn(portStatistics);
+            doReturn(portStatistics).when(httpPort).getStatistics();
 
-            when(_broker.getPorts()).thenReturn(Arrays.asList(httpPort, amqpPort));
-            when(_broker.getChildren(eq(Port.class))).thenReturn(Arrays.asList(httpPort, amqpPort));
+            doReturn(Arrays.asList(httpPort, amqpPort)).when(_broker).getPorts();
+            doReturn(Arrays.asList(httpPort, amqpPort)).when(_broker).getChildren(eq(Port.class));
 
             final List<String> vhnAttributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(VirtualHostNode.class));
             final VirtualHostNode<?> virtualHostNode = mock(VirtualHostNode.class);
-            when(virtualHostNode.getAttributeNames()).thenReturn(vhnAttributeNames);
-            when(virtualHostNode.getAttribute(VirtualHostNode.ID)).thenReturn(UUID.randomUUID());
-            when(virtualHostNode.getAttribute(eq(VirtualHostNode.NAME))).thenReturn("default");
-            when(virtualHostNode.getAttribute(eq(VirtualHostNode.TYPE))).thenReturn(TestVirtualHostNode.VIRTUAL_HOST_NODE_TYPE);
-            when(virtualHostNode.getAttribute(eq(VirtualHostNode.CREATED_TIME))).thenReturn(new Date());
-            when(virtualHostNode.getCreatedTime()).thenReturn(new Date());
+            doReturn(vhnAttributeNames).when(virtualHostNode).getAttributeNames();
+            doReturn(UUID.randomUUID()).when(virtualHostNode).getAttribute(VirtualHostNode.ID);
+            doReturn("default").when(virtualHostNode).getAttribute(eq(VirtualHostNode.NAME));
+            doReturn(TestVirtualHostNode.VIRTUAL_HOST_NODE_TYPE).when(virtualHostNode).getAttribute(eq(VirtualHostNode.TYPE));
+            doReturn(new Date()).when(virtualHostNode).getAttribute(eq(VirtualHostNode.CREATED_TIME));
+            doReturn(new Date()).when(virtualHostNode).getCreatedTime();
 
             final VirtualHostNode mockVirtualHostNode = mock(VirtualHostNode.class);
-            when(mockVirtualHostNode.getAttributeNames()).thenReturn(vhnAttributeNames);
-            when(mockVirtualHostNode.getAttribute(VirtualHostNode.ID)).thenReturn(UUID.randomUUID());
-            when(mockVirtualHostNode.getAttribute(eq(VirtualHostNode.NAME))).thenReturn("mock");
-            when(mockVirtualHostNode.getAttribute(eq(VirtualHostNode.TYPE))).thenReturn("mock");
-            when(mockVirtualHostNode.getAttribute(eq(VirtualHostNode.CREATED_TIME)))
-                .thenReturn(createDate("2001-01-01 12:55:30"));
-            when(mockVirtualHostNode.getCreatedTime()).thenReturn(createDate("2001-01-01 12:55:30"));
+            doReturn(vhnAttributeNames).when(mockVirtualHostNode).getAttributeNames();
+            doReturn(UUID.randomUUID()).when(mockVirtualHostNode).getAttribute(VirtualHostNode.ID);
+            doReturn("mock").when(mockVirtualHostNode).getAttribute(eq(VirtualHostNode.NAME));
+            doReturn("mock").when(mockVirtualHostNode).getAttribute(eq(VirtualHostNode.TYPE));
+            doReturn(createDate("2001-01-01 12:55:30")).when(mockVirtualHostNode).getAttribute(eq(VirtualHostNode.CREATED_TIME));
+            doReturn(createDate("2001-01-01 12:55:30")).when(mockVirtualHostNode).getCreatedTime();
 
-            when(_broker.getVirtualHostNodes()).thenReturn(
-                Arrays.asList(mockVirtualHostNode, virtualHostNode)
-            );
-            when(_broker.getChildren(eq(VirtualHostNode.class))).thenReturn(
-                Arrays.asList(virtualHostNode, mockVirtualHostNode)
-            );
+            doReturn(List.of(mockVirtualHostNode, virtualHostNode)).when(_broker).getVirtualHostNodes();
+            doReturn(List.of(virtualHostNode, mockVirtualHostNode)).when(_broker).getChildren(eq(VirtualHostNode.class));
 
             final List<String> vhAttributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(VirtualHost.class));
             final VirtualHost virtualHost = mock(VirtualHost.class);
-            when(virtualHost.getAttributeNames()).thenReturn(vhAttributeNames);
-            when(virtualHost.getAttribute(VirtualHost.ID)).thenReturn(UUID.randomUUID());
-            when(virtualHost.getAttribute(VirtualHost.TYPE)).thenReturn(TestMemoryVirtualHost.VIRTUAL_HOST_TYPE);
-            when(virtualHost.getAttribute(VirtualHost.NAME)).thenReturn("default");
-            when(virtualHostNode.getChildren(eq(VirtualHost.class))).thenReturn(List.of(virtualHost));
-            when(virtualHostNode.getVirtualHost()).thenReturn(virtualHost);
+            doReturn(vhAttributeNames).when(virtualHost).getAttributeNames();
+            doReturn(UUID.randomUUID()).when(virtualHost).getAttribute(VirtualHost.ID);
+            doReturn(TestMemoryVirtualHost.VIRTUAL_HOST_TYPE).when(virtualHost).getAttribute(VirtualHost.TYPE);
+            doReturn("default").when(virtualHost).getAttribute(VirtualHost.NAME);
+            doReturn(List.of(virtualHost)).when(virtualHostNode).getChildren(eq(VirtualHost.class));
+            doReturn(virtualHost).when(virtualHostNode).getVirtualHost();
 
             for (int i = 1 ; i < 11; i ++)
             {
@@ -188,53 +185,53 @@ public class TestBroker
             for (int i = 10; i < 20; i++)
             {
                 final Queue queue = createQueue(i, OverflowPolicy.REJECT, "test description 2");
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES)).thenReturn(1024 * 1024);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES)).thenReturn(100);
+                doReturn(1024 * 1024).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES);
+                doReturn(100).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES);
                 queues.add(queue);
             }
             for (int i = 20; i < 30; i++)
             {
                 final Queue queue = createQueue(i, OverflowPolicy.FLOW_TO_DISK, "test description 3");
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES)).thenReturn(1024 * 1024);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES)).thenReturn(100);
+                doReturn(1024 * 1024).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES);
+                doReturn(100).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES);
                 queues.add(queue);
             }
             for (int i = 30; i < 40; i++)
             {
                 final Queue queue = createQueue(i, OverflowPolicy.PRODUCER_FLOW_CONTROL, null);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES)).thenReturn(1024 * 1024);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES)).thenReturn(100);
+                doReturn(1024 * 1024).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES);
+                doReturn(100).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES);
                 queues.add(queue);
             }
             for (int i = 40; i < 50; i++)
             {
                 final Queue queue = createQueue(i, OverflowPolicy.NONE, null);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES)).thenReturn(1024 * 1024);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES)).thenReturn(100);
+                doReturn(1024 * 1024).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES);
+                doReturn(100).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES);
                 if (i % 2 == 0)
                 {
-                    when(queue.getAttribute(Queue.EXPIRY_POLICY)).thenReturn(Queue.ExpiryPolicy.ROUTE_TO_ALTERNATE);
-                    when(queue.getAttribute(Queue.LIFETIME_POLICY)).thenReturn(LifetimePolicy.PERMANENT);
+                    doReturn(Queue.ExpiryPolicy.ROUTE_TO_ALTERNATE).when(queue).getAttribute(Queue.EXPIRY_POLICY);
+                    doReturn(LifetimePolicy.PERMANENT).when(queue).getAttribute(Queue.LIFETIME_POLICY);
                 }
                 else
                 {
-                    when(queue.getAttribute(Queue.LIFETIME_POLICY)).thenReturn(LifetimePolicy.IN_USE);
+                    doReturn(LifetimePolicy.IN_USE).when(queue).getAttribute(Queue.LIFETIME_POLICY);
                 }
                 queues.add(queue);
             }
             for (int i = 50; i < 60; i++)
             {
                 final Queue queue = createQueue(i, OverflowPolicy.NONE, null);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES)).thenReturn(1024 * 1024);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES)).thenReturn(100);
+                doReturn(1024 * 1024).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES);
+                doReturn(100).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES);
                 if (i % 2 == 0)
                 {
-                    when(queue.getAttribute(Queue.EXPIRY_POLICY)).thenReturn(Queue.ExpiryPolicy.ROUTE_TO_ALTERNATE);
-                    when(queue.getAttribute(Queue.LIFETIME_POLICY)).thenReturn(LifetimePolicy.PERMANENT);
+                    doReturn(Queue.ExpiryPolicy.ROUTE_TO_ALTERNATE).when(queue).getAttribute(Queue.EXPIRY_POLICY);
+                    doReturn(LifetimePolicy.PERMANENT).when(queue).getAttribute(Queue.LIFETIME_POLICY);
                 }
                 else
                 {
-                    when(queue.getAttribute(Queue.LIFETIME_POLICY)).thenReturn(LifetimePolicy.IN_USE);
+                    doReturn(LifetimePolicy.IN_USE).when(queue).getAttribute(Queue.LIFETIME_POLICY);
                 }
 
                 final Map<String, Object> statistics = new HashMap<>();
@@ -243,7 +240,7 @@ public class TestBroker
                 statistics.put("queueDepthMessages", 65);
                 statistics.put("queueDepthBytes", 0);
                 statistics.put("totalExpiredBytes", 0);
-                when(queue.getStatistics()).thenReturn(statistics);
+                doReturn(statistics).when(queue).getStatistics();
 
                 queues.add(queue);
             }
@@ -251,8 +248,8 @@ public class TestBroker
             for (int i = 60; i < 70; i++)
             {
                 final Queue queue = createQueue(i, OverflowPolicy.NONE, null);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES)).thenReturn(1024 * 1024);
-                when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES)).thenReturn(100);
+                doReturn(1024 * 1024).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES);
+                doReturn(100).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES);
 
                 final Map<String, Object> statistics = new HashMap<>();
                 statistics.put("availableMessages", 95);
@@ -260,25 +257,25 @@ public class TestBroker
                 statistics.put("queueDepthMessages", 95);
                 statistics.put("queueDepthBytes", 0);
                 statistics.put("totalExpiredBytes", 0);
-                when(queue.getStatistics()).thenReturn(statistics);
+                doReturn(statistics).when(queue).getStatistics();
 
                 queues.add(queue);
             }
-            when(virtualHost.getChildren(eq(Queue.class))).thenReturn(queues);
+            doReturn(queues).when(virtualHost).getChildren(eq(Queue.class));
 
             final List<Exchange> exchanges = new ArrayList<>();
             for (int i = 0; i < 10; i++)
             {
                 exchanges.add(creatExchange(i));
             }
-            when(virtualHost.getChildren(eq(Exchange.class))).thenReturn(exchanges);
+            doReturn(exchanges).when(virtualHost).getChildren(eq(Exchange.class));
 
             final Collection<TrustStore> trustStores = createTruststores();
-            when(_broker.getChildren(eq(TrustStore.class))).thenReturn(trustStores);
+            doReturn(trustStores).when(_broker).getChildren(eq(TrustStore.class));
 
-            when(_broker.getAttribute("maximumHeapMemorySize")).thenReturn(10_000_000_000L);
-            when(_broker.getAttribute("maximumDirectMemorySize")).thenReturn(1_500_000_000L);
-            when(_broker.getStatistics()).thenReturn(getBrokerStatistics());
+            doReturn(10_000_000_000L).when(_broker).getAttribute("maximumHeapMemorySize");
+            doReturn(1_500_000_000L).when(_broker).getAttribute("maximumDirectMemorySize");
+            doReturn(getBrokerStatistics()).when(_broker).getStatistics();
         }
         catch (Exception e)
         {
@@ -292,27 +289,27 @@ public class TestBroker
     {
         final List<String> attributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(Queue.class));
         final Queue<?> queue = mock(Queue.class);
-        when(queue.getAttributeNames()).thenReturn(attributeNames);
-        when(queue.getAttribute(Queue.ID)).thenReturn(UUID.randomUUID());
-        when(queue.getAttribute(Queue.NAME)).thenReturn("QUEUE_" + number);
-        when(queue.getAttribute(Queue.TYPE)).thenReturn("standard");
+        doReturn(attributeNames).when(queue).getAttributeNames();
+        doReturn(UUID.randomUUID()).when(queue).getAttribute(Queue.ID);
+        doReturn("QUEUE_" + number).when(queue).getAttribute(Queue.NAME);
+        doReturn("standard").when(queue).getAttribute(Queue.TYPE);
         final Date createdTime = new Date();
-        when(queue.getAttribute(Queue.CREATED_TIME)).thenReturn(createdTime);
-        when(queue.getCreatedTime()).thenReturn(createdTime);
-        when(queue.getAttribute(Queue.LAST_UPDATED_TIME)).thenReturn(new Date());
-        when(queue.getAttribute(Queue.OVERFLOW_POLICY)).thenReturn(overflowPolicy);
+        doReturn(createdTime).when(queue).getAttribute(Queue.CREATED_TIME);
+        doReturn(createdTime).when(queue).getCreatedTime();
+        doReturn(new Date()).when(queue).getAttribute(Queue.LAST_UPDATED_TIME);
+        doReturn(overflowPolicy).when(queue).getAttribute(Queue.OVERFLOW_POLICY);
         if (number % 2 == 0)
         {
-            when(queue.getAttribute(Queue.EXPIRY_POLICY)).thenReturn(Queue.ExpiryPolicy.ROUTE_TO_ALTERNATE);
+            doReturn(Queue.ExpiryPolicy.ROUTE_TO_ALTERNATE).when(queue).getAttribute(Queue.EXPIRY_POLICY);
         }
         else
         {
-            when(queue.getAttribute(Queue.EXPIRY_POLICY)).thenReturn(Queue.ExpiryPolicy.DELETE);
+            doReturn(Queue.ExpiryPolicy.DELETE).when(queue).getAttribute(Queue.EXPIRY_POLICY);
         }
-        when(queue.getAttribute(Queue.LIFETIME_POLICY)).thenReturn(LifetimePolicy.PERMANENT);
-        when(queue.getAttribute(Queue.DESCRIPTION)).thenReturn(description);
-        when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES)).thenReturn(-1);
-        when(queue.getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES)).thenReturn(-1);
+        doReturn(LifetimePolicy.PERMANENT).when(queue).getAttribute(Queue.LIFETIME_POLICY);
+        doReturn(description).when(queue).getAttribute(Queue.DESCRIPTION);
+        doReturn(-1).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_BYTES);
+        doReturn(-1).when(queue).getAttribute(Queue.MAXIMUM_QUEUE_DEPTH_MESSAGES);
 
         final Map<String, Object> statistics = new HashMap<>();
         statistics.put("availableMessages", 0);
@@ -320,12 +317,12 @@ public class TestBroker
         statistics.put("queueDepthMessages", 0);
         statistics.put("queueDepthBytes", 0);
         statistics.put("totalExpiredBytes", 0);
-        when(queue.getStatistics()).thenReturn(statistics);
+        doReturn(statistics).when(queue).getStatistics();
 
         if (number > 0 && number < 11)
         {
             final Consumer consumer = createConsumer(number, "QUEUE_" + number);
-            when(queue.getChildren(eq(Consumer.class))).thenReturn(new ArrayList<>(List.of(consumer)));
+            doReturn(new ArrayList<>(List.of(consumer))).when(queue).getChildren(eq(Consumer.class));
         }
 
         return queue;
@@ -335,22 +332,22 @@ public class TestBroker
     {
         final List<String> attributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(Exchange.class));
         final Exchange<?> exchange = mock(Exchange.class);
-        when(exchange.getAttributeNames()).thenReturn(attributeNames);
-        when(exchange.getAttribute(Exchange.ID)).thenReturn(UUID.randomUUID());
-        when(exchange.getAttribute(Exchange.TYPE)).thenReturn(ExchangeDefaults.TOPIC_EXCHANGE_CLASS);
-        when(exchange.getAttribute(Exchange.NAME)).thenReturn("EXCHANGE_" + number);
-        when(exchange.getName()).thenReturn("EXCHANGE_" + number);
-        when(exchange.getAttribute(Exchange.DESCRIPTION)).thenReturn("test description " + number);
+        doReturn(attributeNames).when(exchange).getAttributeNames();
+        doReturn(UUID.randomUUID()).when(exchange).getAttribute(Exchange.ID);
+        doReturn(ExchangeDefaults.TOPIC_EXCHANGE_CLASS).when(exchange).getAttribute(Exchange.TYPE);
+        doReturn("EXCHANGE_" + number).when(exchange).getAttribute(Exchange.NAME);
+        doReturn("EXCHANGE_" + number).when(exchange).getName();
+        doReturn("test description " + number).when(exchange).getAttribute(Exchange.DESCRIPTION);
 
         final Binding binding = mock(Binding.class);
-        when(binding.getName()).thenReturn("#");
-        when(binding.getBindingKey()).thenReturn("#");
-        when(binding.getType()).thenReturn("binding");
-        when(binding.getDestination()).thenReturn("QUEUE_1");
-        when(binding.getArguments()).thenReturn(new HashMap<>());
+        doReturn("#").when(binding).getName();
+        doReturn("#").when(binding).getBindingKey();
+        doReturn("binding").when(binding).getType();
+        doReturn("QUEUE_1").when(binding).getDestination();
+        doReturn(new HashMap<>()).when(binding).getArguments();
 
-        when(exchange.getAttribute("bindings")).thenReturn(List.of(binding));
-        when(exchange.getBindings()).thenReturn(List.of(binding));
+        doReturn(List.of(binding)).when(exchange).getAttribute("bindings");
+        doReturn(List.of(binding)).when(exchange).getBindings();
 
         return exchange;
     }
@@ -361,11 +358,11 @@ public class TestBroker
         final List<CertificateDetails> certificateDetails = createCertificateDetails();
 
         final TrustStore<?> trustStore = mock(TrustStore.class);
-        when(trustStore.getName()).thenReturn("peersTruststore");
-        when(trustStore.getAttribute(TrustStore.ID)).thenReturn(UUID.randomUUID());
-        when(trustStore.getAttribute(TrustStore.NAME)).thenReturn("peersTruststore");
-        when(trustStore.getAttribute(TrustStore.DESCRIPTION)).thenReturn("mock");
-        when(trustStore.getCertificateDetails()).thenReturn(certificateDetails);
+        doReturn("peersTruststore").when(trustStore).getName();
+        doReturn(UUID.randomUUID()).when(trustStore).getAttribute(TrustStore.ID);
+        doReturn("peersTruststore").when(trustStore).getAttribute(TrustStore.NAME);
+        doReturn("mock").when(trustStore).getAttribute(TrustStore.DESCRIPTION);
+        doReturn(certificateDetails).when(trustStore).getCertificateDetails();
 
         trustStores.add(trustStore);
 
@@ -377,114 +374,114 @@ public class TestBroker
         final List<CertificateDetails> list = new ArrayList<>();
 
         final CertificateDetails certificateDetails1 = mock(CertificateDetails.class);
-        when(certificateDetails1.getAlias()).thenReturn("aaa_mock");
-        when(certificateDetails1.getIssuerName()).thenReturn("CN=aaa_mock");
-        when(certificateDetails1.getSerialNumber()).thenReturn(String.valueOf(1L));
-        when(certificateDetails1.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails1.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails1.getSubjectName()).thenReturn("CN=aaa_mock");
-        when(certificateDetails1.getValidFrom()).thenReturn(createDate("2020-01-01 00:00:00"));
-        when(certificateDetails1.getValidUntil()).thenReturn(createDate("2022-12-31 23:59:59"));
-        when(certificateDetails1.getVersion()).thenReturn(3);
+        doReturn("aaa_mock").when(certificateDetails1).getAlias();
+        doReturn("CN=aaa_mock").when(certificateDetails1).getIssuerName();
+        doReturn(String.valueOf(1L)).when(certificateDetails1).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails1).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails1).getSubjectAltNames();
+        doReturn("CN=aaa_mock").when(certificateDetails1).getSubjectName();
+        doReturn(createDate("2020-01-01 00:00:00")).when(certificateDetails1).getValidFrom();
+        doReturn(createDate("2022-12-31 23:59:59")).when(certificateDetails1).getValidUntil();
+        doReturn(3).when(certificateDetails1).getVersion();
         list.add(certificateDetails1);
 
         final CertificateDetails certificateDetails2 = mock(CertificateDetails.class);
-        when(certificateDetails2.getAlias()).thenReturn("bbb_mock");
-        when(certificateDetails2.getIssuerName()).thenReturn("CN=bbb_mock");
-        when(certificateDetails2.getSerialNumber()).thenReturn(String.valueOf(100L));
-        when(certificateDetails2.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails2.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails2.getSubjectName()).thenReturn("CN=bbb_mock");
-        when(certificateDetails2.getValidFrom()).thenReturn(createDate("2020-01-02 00:00:00"));
-        when(certificateDetails2.getValidUntil()).thenReturn(createDate("2023-01-01 23:59:59"));
+        doReturn("bbb_mock").when(certificateDetails2).getAlias();
+        doReturn("CN=bbb_mock").when(certificateDetails2).getIssuerName();
+        doReturn(String.valueOf(100L)).when(certificateDetails2).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails2).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails2).getSubjectAltNames();
+        doReturn("CN=bbb_mock").when(certificateDetails2).getSubjectName();
+        doReturn(createDate("2020-01-02 00:00:00")).when(certificateDetails2).getValidFrom();
+        doReturn(createDate("2023-01-01 23:59:59")).when(certificateDetails2).getValidUntil();
         list.add(certificateDetails2);
 
         final CertificateDetails certificateDetails3 = mock(CertificateDetails.class);
-        when(certificateDetails3.getAlias()).thenReturn("ccc_mock");
-        when(certificateDetails3.getIssuerName()).thenReturn("CN=ccc_mock");
-        when(certificateDetails3.getSerialNumber()).thenReturn(String.valueOf(1000L));
-        when(certificateDetails3.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails3.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails3.getSubjectName()).thenReturn("CN=ccc_mock");
-        when(certificateDetails3.getValidFrom()).thenReturn(createDate("2020-01-03 00:00:00"));
-        when(certificateDetails3.getValidUntil()).thenReturn(createDate("2023-01-02 23:59:59"));
+        doReturn("ccc_mock").when(certificateDetails3).getAlias();
+        doReturn("CN=ccc_mock").when(certificateDetails3).getIssuerName();
+        doReturn(String.valueOf(1000L)).when(certificateDetails3).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails3).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails3).getSubjectAltNames();
+        doReturn("CN=ccc_mock").when(certificateDetails3).getSubjectName();
+        doReturn(createDate("2020-01-03 00:00:00")).when(certificateDetails3).getValidFrom();
+        doReturn(createDate("2023-01-02 23:59:59")).when(certificateDetails3).getValidUntil();
         list.add(certificateDetails3);
 
         final CertificateDetails certificateDetails4 = mock(CertificateDetails.class);
-        when(certificateDetails4.getAlias()).thenReturn("ddd_mock");
-        when(certificateDetails4.getIssuerName()).thenReturn("CN=ddd_mock");
-        when(certificateDetails4.getSerialNumber()).thenReturn(String.valueOf(10_000L));
-        when(certificateDetails4.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails4.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails4.getSubjectName()).thenReturn("CN=ddd_mock");
-        when(certificateDetails4.getValidFrom()).thenReturn(createDate("2020-01-04 00:00:00"));
-        when(certificateDetails4.getValidUntil()).thenReturn(createDate("2023-01-03 23:59:59"));
+        doReturn("ddd_mock").when(certificateDetails4).getAlias();
+        doReturn("CN=ddd_mock").when(certificateDetails4).getIssuerName();
+        doReturn(String.valueOf(10_000L)).when(certificateDetails4).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails4).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails4).getSubjectAltNames();
+        doReturn("CN=ddd_mock").when(certificateDetails4).getSubjectName();
+        doReturn(createDate("2020-01-04 00:00:00")).when(certificateDetails4).getValidFrom();
+        doReturn(createDate("2023-01-03 23:59:59")).when(certificateDetails4).getValidUntil();
         list.add(certificateDetails4);
 
         final CertificateDetails certificateDetails5 = mock(CertificateDetails.class);
-        when(certificateDetails5.getAlias()).thenReturn("eee_mock");
-        when(certificateDetails5.getIssuerName()).thenReturn("CN=eee_mock");
-        when(certificateDetails5.getSerialNumber()).thenReturn(String.valueOf(100_000L));
-        when(certificateDetails5.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails5.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails5.getSubjectName()).thenReturn("CN=eee_mock");
-        when(certificateDetails5.getValidFrom()).thenReturn(createDate("2020-01-05 00:00:00"));
-        when(certificateDetails5.getValidUntil()).thenReturn(createDate("2023-01-04 23:59:59"));
+        doReturn("eee_mock").when(certificateDetails5).getAlias();
+        doReturn("CN=eee_mock").when(certificateDetails5).getIssuerName();
+        doReturn(String.valueOf(100_000L)).when(certificateDetails5).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails5).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails5).getSubjectAltNames();
+        doReturn("CN=eee_mock").when(certificateDetails5).getSubjectName();
+        doReturn(createDate("2020-01-05 00:00:00")).when(certificateDetails5).getValidFrom();
+        doReturn(createDate("2023-01-04 23:59:59")).when(certificateDetails5).getValidUntil();
         list.add(certificateDetails5);
 
         final CertificateDetails certificateDetails6 = mock(CertificateDetails.class);
-        when(certificateDetails6.getAlias()).thenReturn("fff_mock");
-        when(certificateDetails6.getIssuerName()).thenReturn("CN=fff_mock");
-        when(certificateDetails6.getSerialNumber()).thenReturn(String.valueOf(1000_000L));
-        when(certificateDetails6.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails6.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails6.getSubjectName()).thenReturn("CN=fff_mock");
-        when(certificateDetails6.getValidFrom()).thenReturn(createDate("2020-01-06 00:00:00"));
-        when(certificateDetails6.getValidUntil()).thenReturn(createDate("2023-01-05 23:59:59"));
+        doReturn("fff_mock").when(certificateDetails6).getAlias();
+        doReturn("CN=fff_mock").when(certificateDetails6).getIssuerName();
+        doReturn(String.valueOf(1000_000L)).when(certificateDetails6).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails6).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails6).getSubjectAltNames();
+        doReturn("CN=fff_mock").when(certificateDetails6).getSubjectName();
+        doReturn(createDate("2020-01-06 00:00:00")).when(certificateDetails6).getValidFrom();
+        doReturn(createDate("2023-01-05 23:59:59")).when(certificateDetails6).getValidUntil();
         list.add(certificateDetails6);
 
         final CertificateDetails certificateDetails7 = mock(CertificateDetails.class);
-        when(certificateDetails7.getAlias()).thenReturn("ggg_mock");
-        when(certificateDetails7.getIssuerName()).thenReturn("CN=ggg_mock");
-        when(certificateDetails7.getSerialNumber()).thenReturn(String.valueOf(10_000_000L));
-        when(certificateDetails7.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails7.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails7.getSubjectName()).thenReturn("CN=ggg_mock");
-        when(certificateDetails7.getValidFrom()).thenReturn(createDate("2020-01-07 00:00:00"));
-        when(certificateDetails7.getValidUntil()).thenReturn(createDate("2023-01-06 23:59:59"));
+        doReturn("ggg_mock").when(certificateDetails7).getAlias();
+        doReturn("CN=ggg_mock").when(certificateDetails7).getIssuerName();
+        doReturn(String.valueOf(10_000_000L)).when(certificateDetails7).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails7).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails7).getSubjectAltNames();
+        doReturn("CN=ggg_mock").when(certificateDetails7).getSubjectName();
+        doReturn(createDate("2020-01-07 00:00:00")).when(certificateDetails7).getValidFrom();
+        doReturn(createDate("2023-01-06 23:59:59")).when(certificateDetails7).getValidUntil();
         list.add(certificateDetails7);
 
         final CertificateDetails certificateDetails8 = mock(CertificateDetails.class);
-        when(certificateDetails8.getAlias()).thenReturn("hhh_mock");
-        when(certificateDetails8.getIssuerName()).thenReturn("CN=hhh_mock");
-        when(certificateDetails8.getSerialNumber()).thenReturn(String.valueOf(100_000_000L));
-        when(certificateDetails8.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails8.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails8.getSubjectName()).thenReturn("CN=hhh_mock");
-        when(certificateDetails8.getValidFrom()).thenReturn(createDate("2020-01-08 00:00:00"));
-        when(certificateDetails8.getValidUntil()).thenReturn(createDate("2023-01-07 23:59:59"));
+        doReturn("hhh_mock").when(certificateDetails8).getAlias();
+        doReturn("CN=hhh_mock").when(certificateDetails8).getIssuerName();
+        doReturn(String.valueOf(100_000_000L)).when(certificateDetails8).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails8).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails8).getSubjectAltNames();
+        doReturn("CN=hhh_mock").when(certificateDetails8).getSubjectName();
+        doReturn(createDate("2020-01-08 00:00:00")).when(certificateDetails8).getValidFrom();
+        doReturn(createDate("2023-01-07 23:59:59")).when(certificateDetails8).getValidUntil();
         list.add(certificateDetails8);
 
         final CertificateDetails certificateDetails9 = mock(CertificateDetails.class);
-        when(certificateDetails9.getAlias()).thenReturn("iii_mock");
-        when(certificateDetails9.getIssuerName()).thenReturn("CN=iii_mock");
-        when(certificateDetails9.getSerialNumber()).thenReturn(String.valueOf(1000_000_000L));
-        when(certificateDetails9.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails9.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails9.getSubjectName()).thenReturn("CN=iii_mock");
-        when(certificateDetails9.getValidFrom()).thenReturn(createDate("2020-01-09 00:00:00"));
-        when(certificateDetails9.getValidUntil()).thenReturn(createDate("2023-01-08 23:59:59"));
+        doReturn("iii_mock").when(certificateDetails9).getAlias();
+        doReturn("CN=iii_mock").when(certificateDetails9).getIssuerName();
+        doReturn(String.valueOf(1000_000_000L)).when(certificateDetails9).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails9).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails9).getSubjectAltNames();
+        doReturn("CN=iii_mock").when(certificateDetails9).getSubjectName();
+        doReturn(createDate("2020-01-09 00:00:00")).when(certificateDetails9).getValidFrom();
+        doReturn(createDate("2023-01-08 23:59:59")).when(certificateDetails9).getValidUntil();
         list.add(certificateDetails9);
 
         final CertificateDetails certificateDetails10 = mock(CertificateDetails.class);
-        when(certificateDetails10.getAlias()).thenReturn("jjj_mock");
-        when(certificateDetails10.getIssuerName()).thenReturn("CN=jjj_mock");
-        when(certificateDetails10.getSerialNumber()).thenReturn(new BigInteger("17593798617727720249").toString(10));
-        when(certificateDetails10.getSignatureAlgorithm()).thenReturn("SHA512withRSA");
-        when(certificateDetails10.getSubjectAltNames()).thenReturn(List.of());
-        when(certificateDetails10.getSubjectName()).thenReturn("CN=jjj_mock");
-        when(certificateDetails10.getValidFrom()).thenReturn(createDate("2020-01-10 00:00:00"));
-        when(certificateDetails10.getValidUntil()).thenReturn(createDate("2023-01-09 23:59:59"));
+        doReturn("jjj_mock").when(certificateDetails10).getAlias();
+        doReturn("CN=jjj_mock").when(certificateDetails10).getIssuerName();
+        doReturn(new BigInteger("17593798617727720249").toString(10)).when(certificateDetails10).getSerialNumber();
+        doReturn("SHA512withRSA").when(certificateDetails10).getSignatureAlgorithm();
+        doReturn(List.of()).when(certificateDetails10).getSubjectAltNames();
+        doReturn("CN=jjj_mock").when(certificateDetails10).getSubjectName();
+        doReturn(createDate("2020-01-10 00:00:00")).when(certificateDetails10).getValidFrom();
+        doReturn(createDate("2023-01-09 23:59:59")).when(certificateDetails10).getValidUntil();
         list.add(certificateDetails10);
 
         return list;
@@ -494,29 +491,29 @@ public class TestBroker
     {
         final List<String> attributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(Connection.class));
         AMQPConnection<?> connection = mock(AMQPConnection.class);
-        when(connection.getAttributeNames()).thenReturn(attributeNames);
+        doReturn(attributeNames).when(connection).getAttributeNames();
         final UUID id = UUID.randomUUID();
-        when(connection.getAttribute(Connection.ID)).thenReturn(id);
-        when(connection.getId()).thenReturn(id);
-        when(connection.getAttribute(Connection.NAME)).thenReturn(String.format("[%d] %s:%d", number, hostname, (47290 + number)));
-        when(connection.getAttribute(Connection.DESCRIPTION)).thenReturn(null);
-        when(connection.getAttribute(Connection.TYPE)).thenReturn("AMQP_1_0");
-        when(connection.getAttribute(Connection.STATE)).thenReturn(State.ACTIVE);
-        when(connection.getAttribute(Connection.DURABLE)).thenReturn(false);
-        when(connection.getAttribute(Connection.LIFETIME_POLICY)).thenReturn(LifetimePolicy.PERMANENT);
-        when(connection.getAttribute(Connection.CONTEXT)).thenReturn(new HashMap<>());
-        when(connection.getAttribute(Connection.CLIENT_ID)).thenReturn("ID:" + UUID.randomUUID() + ":1");
-        when(connection.getClientProduct()).thenReturn("QpidJMS");
-        when(connection.getAttribute(Connection.CLIENT_VERSION)).thenReturn("0.32.0");
-        when(connection.getAttribute(Connection.INCOMING)).thenReturn(true);
-        when(connection.getAttribute(Connection.PRINCIPAL)).thenReturn(principal);
-        when(connection.getProtocol()).thenReturn(Protocol.AMQP_1_0);
-        when(connection.getAttribute(Connection.REMOTE_ADDRESS)).thenReturn(String.format("/%s:%d", hostname, (47290 + number)));
-        when(connection.getAttribute(Connection.TRANSPORT)).thenReturn(Transport.TCP);
+        doReturn(id).when(connection).getAttribute(Connection.ID);
+        doReturn(id).when(connection).getId();
+        doReturn(String.format("[%d] %s:%d", number, hostname, (47290 + number))).when(connection).getAttribute(Connection.NAME);
+        doReturn(null).when(connection).getAttribute(Connection.DESCRIPTION);
+        doReturn("AMQP_1_0").when(connection).getAttribute(Connection.TYPE);
+        doReturn(State.ACTIVE).when(connection).getAttribute(Connection.STATE);
+        doReturn(false).when(connection).getAttribute(Connection.DURABLE);
+        doReturn(LifetimePolicy.PERMANENT).when(connection).getAttribute(Connection.LIFETIME_POLICY);
+        doReturn(new HashMap<>()).when(connection).getAttribute(Connection.CONTEXT);
+        doReturn("ID:" + UUID.randomUUID() + ":1").when(connection).getAttribute(Connection.CLIENT_ID);
+        doReturn("QpidJMS").when(connection).getClientProduct();
+        doReturn("0.32.0").when(connection).getAttribute(Connection.CLIENT_VERSION);
+        doReturn(true).when(connection).getAttribute(Connection.INCOMING);
+        doReturn(principal).when(connection).getAttribute(Connection.PRINCIPAL);
+        doReturn(Protocol.AMQP_1_0).when(connection).getProtocol();
+        doReturn(String.format("/%s:%d", hostname, (47290 + number))).when(connection).getAttribute(Connection.REMOTE_ADDRESS);
+        doReturn(Transport.TCP).when(connection).getAttribute(Connection.TRANSPORT);
 
         final Session session = createSession(0);
-        when(connection.getSessions()).thenReturn(List.of(session));
-        when(connection.getChildren(eq(Session.class))).thenReturn(List.of(session));
+        doReturn(List.of(session)).when(connection).getSessions();
+        doReturn(List.of(session)).when(connection).getChildren(eq(Session.class));
 
         return connection;
     }
@@ -525,14 +522,13 @@ public class TestBroker
     {
         final List<String> attributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(Consumer.class));
         final Consumer<?, ?> consumer = mock(Consumer.class);
-        when(consumer.getAttributeNames()).thenReturn(attributeNames);
-        when(consumer.getAttribute(Consumer.ID)).thenReturn(UUID.randomUUID());
-        when(consumer.getAttribute(Consumer.NAME)).thenReturn(
-            String.format("%d|1|qpid-jms:receiver:ID:%s:1:1:1:%s", connectionNumber, UUID.randomUUID(), queueName)
-        );
+        doReturn(attributeNames).when(consumer).getAttributeNames();
+        doReturn(UUID.randomUUID()).when(consumer).getAttribute(Consumer.ID);
+        doReturn("%d|1|qpid-jms:receiver:ID:%s:1:1:1:%s".formatted(connectionNumber, UUID.randomUUID(), queueName))
+                .when(consumer).getAttribute(Consumer.NAME);
         final Session session = (Session) connections.get(connectionNumber).getSessions().iterator().next();
-        when(consumer.getSession()).thenReturn(session);
-        when(consumer.getAttribute("session")).thenReturn(session);
+        doReturn(session).when(consumer).getSession();
+        doReturn(session).when(consumer).getAttribute("session");
         return consumer;
     }
 
@@ -540,26 +536,26 @@ public class TestBroker
     {
         final List<String> attributeNames = new ArrayList<>(_broker.getModel().getTypeRegistry().getAttributeNames(Session.class));
         final Session<?> session = mock(Session.class);
-        when(session.getAttributeNames()).thenReturn(attributeNames);
+        doReturn(attributeNames).when(session).getAttributeNames();
         final UUID id = UUID.randomUUID();
-        when(session.getAttribute(Session.ID)).thenReturn(id);
-        when(session.getId()).thenReturn(id);
-        when(session.getAttribute(Session.NAME)).thenReturn(sessionNumber);
-        when(session.getName()).thenReturn(String.valueOf(sessionNumber));
-        when(session.getType()).thenReturn("Session");
-        when(session.getDescription()).thenReturn("test description");
-        when(session.getDesiredState()).thenReturn(State.ACTIVE);
-        when(session.getState()).thenReturn(State.ACTIVE);
-        when(session.isDurable()).thenReturn(true);
-        when(session.getLifetimePolicy()).thenReturn(LifetimePolicy.PERMANENT);
-        when(session.getChannelId()).thenReturn(0);
-        when(session.getLastOpenedTime()).thenReturn(new Date());
-        when(session.isProducerFlowBlocked()).thenReturn(false);
-        when(session.getLastUpdatedTime()).thenReturn(new Date());
-        when(session.getLastUpdatedBy()).thenReturn("admin");
-        when(session.getCreatedBy()).thenReturn("admin");
-        when(session.getCreatedTime()).thenReturn(new Date());
-        when(session.getStatistics()).thenReturn(new HashMap<>());
+        doReturn(id).when(session).getAttribute(Session.ID);
+        doReturn(id).when(session).getId();
+        doReturn(sessionNumber).when(session).getAttribute(Session.NAME);
+        doReturn(String.valueOf(sessionNumber)).when(session).getName();
+        doReturn("Session").when(session).getType();
+        doReturn("test description").when(session).getDescription();
+        doReturn(State.ACTIVE).when(session).getDesiredState();
+        doReturn(State.ACTIVE).when(session).getState();
+        doReturn(true).when(session).isDurable();
+        doReturn(LifetimePolicy.PERMANENT).when(session).getLifetimePolicy();
+        doReturn(0).when(session).getChannelId();
+        doReturn(new Date()).when(session).getLastOpenedTime();
+        doReturn(false).when(session).isProducerFlowBlocked();
+        doReturn(new Date()).when(session).getLastUpdatedTime();
+        doReturn("admin").when(session).getLastUpdatedBy();
+        doReturn("admin").when(session).getCreatedBy();
+        doReturn(new Date()).when(session).getCreatedTime();
+        doReturn(new HashMap<>()).when(session).getStatistics();
         return session;
     }
 
